# ida-domain-skill

./: .gitignore  README.md
.claude-plugin/: marketplace.json  plugin.json
commands/: ida-domain-bootstrap.md  ida-domain-run-example.md
commands/ida-domain-skill/: bootstrap.md  run-test.md
examples/: Makefile  README.md
examples/02_callgraph_hotspot_ranking/: prompt.txt
examples/04_cross_module_import_map/: Makefile  input
examples/05_encrypted_string_recovery/: input  prompt.txt
examples/06_config_structure_carving/: Makefile  prompt.txt
examples/08_command_table_dispatch/: Makefile  input  prompt.txt
examples/09_prototype_reconstruction/: prompt.txt
examples/10_function_chunk_repair/: SKIP.md  prompt.txt
examples/11_vtable_discovery/: prompt.txt
examples/12_decompiler_renaming/: input  prompt.txt
examples/14_opaque_predicate_detection/: SKIP.md  prompt.txt
examples/15_junk_block_cleanup/: SKIP.md
examples/16_auth_license_check_finder/: Makefile  input
examples/18_binary_sarif_export/: input  prompt.txt
examples/20_scalable_project_annotator/: SKIP.md  prompt.txt
ida-domain-scripting/.claude-plugin/: plugin.json
plugins/ida-domain/skills/ida-domain-scripting/: API_REFERENCE.md  SKILL.md  pyproject.toml  run.py  setup.py
plugins/ida-plugin/: LICENSE  README.md  TODO.md
results/01_auto_tag_function_roles/: script.py
results/11_vtable_discovery/: output.txt  (+1 more)
skills/ida-domain-scripting/: API_REFERENCE.md  SKILL.md  bootstrap.py  pyproject.toml  run.py  setup.py
skills/ida-domain-scripting/lib/: helpers.py
tests/: CLAUDE.md
(+108 files in other folders)
